fix(singleProject): Target container for margin on mobile

--- a/src/styles/_singleProject.scss
+++ b/src/styles/_singleProject.scss
@@ -83,7 +83,7 @@
             
             display: none;
         }
-        a{
+        .project-link-container{
             margin-bottom: 15px;
         }
     }
